<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScreenTime.WindowLayout"
    android:orientation="vertical"
    tools:context="org.bobturf.screentime.AuthActivity">

    <TextView
        style="@style/ScreenTime.FillWidth"
        android:text="@string/change_passcode" />

    <EditText
        style="@style/ScreenTime.FillWidth.PassCode"
        android:hint="@string/passcode_hint"
        android:id="@+id/passcode_entry" />

    <EditText
        style="@style/ScreenTime.FillWidth.PassCode"
        android:hint="@string/passcode_confirm_hint"
        android:id="@+id/passcode_confirm_entry" />

    <LinearLayout
        style="@style/ScreenTime.FillWidth"
        android:orientation="horizontal">
        <Button
            style="@style/ScreenTime.Button"
            android:id="@+id/change_passcode_button"
            android:enabled="false"
            android:text="@string/change_passcode_button"
            android:onClick="changePasscode" />
        <Button
            style="@style/ScreenTime.Button"
            android:text="@string/cancel_button"
            android:onClick="cancel" />
    </LinearLayout>

</LinearLayout>
